--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2189,7 +2189,7 @@ input, select, textarea {
 	}
 
 		header.major:after {
-			background: #e44c65;
+			background: #fff;
 			content: '';
 			display: inline-block;
 			height: 0.2em;
@@ -2414,6 +2414,12 @@ input, select, textarea {
 		}
 
 /* Icon */
+
+span img .js {
+	height: 10px;
+	padding: 10px;
+	max-width: 10px;
+}
 
 	.icon {
 		text-decoration: none;
@@ -2855,8 +2861,8 @@ input, select, textarea {
 		input[type="button"]:active,
 		.button:hover,
 		.button:active {
-			box-shadow: inset 0 0 0 1px #e44c65;
-			color: #e44c65 !important;
+			box-shadow: inset 0 0 0 1px black;
+			color: black !important;
 		}
 
 		input[type="submit"]:active,
@@ -2898,7 +2904,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #e44c65;
+			background-color: #24b682;
 			box-shadow: none;
 			color: #ffffff !important;
 		}
@@ -2907,14 +2913,15 @@ input, select, textarea {
 			input[type="reset"].primary:hover,
 			input[type="button"].primary:hover,
 			.button.primary:hover {
-				background-color: #e76278;
+				background-color: white;
+				color: black !important;
 			}
 
 			input[type="submit"].primary:active,
 			input[type="reset"].primary:active,
 			input[type="button"].primary:active,
 			.button.primary:active {
-				background-color: #e13652;
+				background-color: black;
 			}
 
 		input[type="submit"].disabled, input[type="submit"]:disabled,
@@ -3139,15 +3146,15 @@ input, select, textarea {
 		}
 
 		.spotlight.style1 .content {
-			border-color: #e44c65;
+			border-color: #fff;
 		}
 
 		.spotlight.style2 .content {
-			border-color: #ff00ff;
+			border-color: #fff;
 		}
 
 		.spotlight.style3 .content {
-			border-color: #39c088;
+			border-color: #fff;
 		}
 
 		.spotlight.inactive .content {
@@ -3201,7 +3208,7 @@ input, select, textarea {
 	}
 
 		.wrapper.style2 {
-			background: #e44c65;
+			background: #00008B;
 		}
 
 			.wrapper.style2 input[type="text"]:focus,
@@ -3236,7 +3243,7 @@ input, select, textarea {
 			.wrapper.style2 input[type="button"].primary,
 			.wrapper.style2 .button.primary {
 				background-color: #ffffff;
-				color: #e44c65 !important;
+				color: #00008B !important;
 			}
 
 				.wrapper.style2 input[type="submit"].primary:hover, .wrapper.style2 input[type="submit"].primary:active,
@@ -3395,7 +3402,7 @@ input, select, textarea {
 			font-size: 20vh;
 			font-size: 50px;
 			text-transform: uppercase;
-			background-image:url(images/efeito.jpeg);
+			background-image:url(images/efeito4.jpg);
 			background-clip: text;
 			-webkit-background-clip: text;
 			color: transparent;
@@ -3471,40 +3478,26 @@ input, select, textarea {
 /* Banner */
 
 	#banner {
-		background-attachment: fixed;
-		background-color: #272833;
-		background-image: url("../../images/banner.jpg");
-		background-position: center center;
-		background-size: cover;
-		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
-		min-height: 100vh;
-		position: relative;
-		text-align: center;
-		z-index: 21;
-	}
-
-		#banner:before {
-			content: '';
-			display: inline-block;
-			height: 100vh;
-			vertical-align: middle;
-			width: 1%;
-		}
-
-		#banner:after {
-			background-image: -moz-linear-gradient(top, rgba(28, 44, 160, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -webkit-linear-gradient(top, rgba(13, 31, 172, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: -ms-linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			background-image: linear-gradient(top, rgba(23, 24, 32, 0.95), rgba(23, 24, 32, 0.95)), url("images/overlay.png");;
-			content: '';
-			display: block;
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
 			width: 100%;
+			height: 100vh;
+			color: #fff;
+			background: linear-gradient(-45deg, #0000CD, #3CB371, #0000CD, #A9A9A9);
+			background-size: 400% 400%;
+			position: relative;
+			animation: change 15s ease-in-out infinite;
 		}
-
+		
+		@keyframes change {
+			0% {
+				background-position: 0 50%;
+			}
+			50% {
+				background-position: 100% 50%;
+			}
+			110% {
+				background-position: 0 50%;
+			}
+		}
 		#banner .content {
 			display: inline-block;
 			margin-right: 1%;
