--- a/assets/css/main2.css
+++ b/assets/css/main2.css
@@ -265,7 +265,7 @@ dt {
 /* HYPERLINKS */
 a {
   text-decoration: none;
-  color: white;
+  color: #2E8B57;
   -webkit-transition: color 0.1s linear, border 0.1s linear, opacity 0.1s linear, background-color 0.1s linear;
   -moz-transition: color 0.1s linear, border 0.1s linear, opacity 0.1s linear, background-color 0.1s linear;
   -ms-transition: color 0.1s linear, border 0.1s linear, opacity 0.1s linear, background-color 0.1s linear;
